# hou-intern-23

./: .python-version  README.md  pyproject.toml
weather/: 'weatherSample.csv'  Avg-weekly-temperature_USB-516_Mohammod-Islam  Visualize-Avg-weekly-temperature_USB-519_Mohammod-Islam  Weather.Viz.py  api_reader.py  class_Transformers.py  class_Transformers:.py  config.py  connector_class.py  dotenv-0.0.5-py3-none-any.whl  last_30_days.py  main.py  plot_line_graph.py  test_extend.py  transformers.py  weather_visualization.py
weather/data/: robin.csv
weather/test/: practice  test_class.py  test_plot_30_days.py  test_sample.py  test_sysexit.py
