[tool.poetry]
name = "hou-intern-23"
version = "0.1.0"
description = ""
authors = ["Wynn Boss <wynn.boss@bjss.com>"]
readme = "README.md"
packages = [{include = "hou_intern_23"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
